<resources>
    <string name="app_name">Tenshi</string>
    <string name="shared_app_label" translatable="false">Tenshi</string>
    <string name="shared_placeholder">Ingredients:\n360g flour\n350g chocolate chips\n230g butter\n200g white sugar\n220g brown sugar\n2 large eggs\n2 teaspoons vanilla extract\n1 teaspoon baking powder\n1 teaspoon salt\n\nPreheat the oven to 190 degrees Celsius. Line a baking pan with baking paper and set aside.\nIn a bowl, mix flour, salt and baking powder and set aside.\nCream butter and sugar until combined.\nBeat in eggs and vanilla until mixture is fluffy.\nMix in dry ingredients until combined.\nAdd chocolate chips and mix well.\nForm dough into balls and spread evenly on cookie sheet.\nBake in preheated oven for about 8–10 minutes. Take the cookies out when they just start to brown.\nLet the cookies rest on the cookie sheet for 2 minutes.</string>
    <string name="shared_snack_server_connect_error">Error connecting to server</string>
    <string name="shared_unknown">Unknown</string>
    <string name="shared_no_value">-</string>
    <string name="shared_num_episodes_fmt">%s Episodes</string>
    <string name="shared_desc_poster">Poster</string>
    <string name="shared_toast_copied_to_clip">Copied to Clipboard</string>
    <string name="shared_snack_no_internet">You\'re Offline! Information may be incomplete or out of date</string>
    <string name="shared_snack_no_internet_dismiss">Dismiss</string>
    <string name="shared_dialog_confirmation_yes">Yes</string>
    <string name="shared_dialog_confirmation_no">No</string>
    <string name="main_search_mal">Search in MAL</string>
    <string name="main_nav_title_home">Home</string>
    <string name="main_nav_title_anime_list">Anime</string>
    <string name="main_nav_title_profile">Profile</string>
    <string name="main_nav_title_search">Search</string>
    <string name="home_current_season_title">This Season</string>
    <string name="home_recommendations_title">Recommendations</string>
    <string name="profile_username">Username</string>
    <string name="profile_view_on_mal">View profile on MAL</string>
    <string name="profile_desc_profile_picture">Profile picture</string>
    <string name="profile_days_wasted_fmt">%s\nDays</string>
    <string name="profile_num_episodes_fmt">%s\nEpisodes</string>
    <string name="profile_total_entries_fmt">%s\nAnime</string>
    <string name="profile_donut_desc_watching_fmt">%s Watching</string>
    <string name="profile_donut_desc_completed_fmt">%s Completed</string>
    <string name="profile_donut_desc_on_hold_fmt">%s On Hold</string>
    <string name="profile_donut_desc_dropped_fmt">%s Dropped</string>
    <string name="profile_donut_desc_plan_to_watch_fmt">%s Plan to Watch</string>
    <string name="list_sort_by_title">Title</string>
    <string name="list_sort_by_score">Score</string>
    <string name="list_sort_by_updated">Last Updated</string>
    <string name="details_title">Anime Details</string>
    <string name="details_dev_anime_id">Anime ID</string>
    <string name="details_synonyms">Synonyms</string>
    <string name="details_title_jp">Japanese</string>
    <string name="details_start_date">Start Date</string>
    <string name="details_end_date">End Date</string>
    <string name="details_season">Season</string>
    <string name="details_broadcast_time">Broadcast</string>
    <string name="details_episode_duration">Duration</string>
    <string name="details_source">Source</string>
    <string name="details_studios">Studios</string>
    <string name="details_expand_synopsis">Expand synopsis</string>
    <string name="details_related_title">Related</string>
    <string name="details_opening_themes_title">Opening Themes</string>
    <string name="details_ending_theme_title">Ending Themes</string>
    <string name="details_add_to_list">Add to Profile</string>
    <string name="details_anime_delete">Remove Entry</string>
    <string name="details_anime_duration_minutes_fmt">%d minutes</string>
    <string name="details_status_episode_select_fmt">Episode %d</string>
    <string name="details_status_episode_select_none">None</string>
    <string name="details_status_episodes_progress_fmt">%d / %d</string>
    <string name="details_status_episodes_progress_no_episodes">No Episodes Yet</string>
    <string name="details_watch_episode_on_fmt">Watch EP %d on %s</string>
    <string name="details_choose_content_provider_menu">Source</string>
    <string name="details_watch_intent_title_fmt">%s Episode %d</string>
    <string name="details_snack_entry_removed">Deleted</string>
    <string name="details_snack_entry_remove_error">Error deleting entry</string>
    <string name="details_snack_entry_updated">Updated</string>
    <string name="details_snack_entry_update_error">Error updating list</string>
    <string name="details_snack_entry_added">Added to Plan to Watch</string>
    <string name="details_snack_update_no_changes">No changes</string>
    <string name="details_snack_error_no_id">Invalid Anime ID. Have a helpful fox instead</string>
    <string name="details_snack_content_empty_response">Could not start Playback. Try another Source</string>
    <string name="details_snack_failed_to_create_pin">Failed to Pin to Homescreen</string>
    <string name="details_snack_launcher_does_not_support_pins">Your launcher does not seem to support creating Pins</string>
    <string name="details_menu_view_on_mal">View on MAL</string>
    <string name="details_menu_add_homescreen_pin">Pin to Homescreen</string>
    <string name="details_menu_share">Share</string>
    <string name="oobe_title">Onboarding</string>
    <string name="oobe_prev_page">Back</string>
    <string name="oobe_next_page">Next</string>
    <string name="oobe_con_check_in_progress">Checking your Connection</string>
    <string name="oobe_con_check_failed">Please check your Internet connection.</string>
    <string name="oobe_con_retry">Retry</string>
    <string name="login_login">Login</string>
    <string name="login_welcome_fmt">Hi %s!</string>
    <string name="login_welcome_sub">Just a few steps to get you started!</string>
    <string name="login_snack_login_error">Login error</string>
    <string name="login_snack_load_profile_error">Could not load profile. Please try again.</string>
    <string name="login_toast_session_expired">Session Expired, please log in again</string>
    <string name="oobe_config_title_main">Streamline your Experience</string>
    <string name="oobe_config_title_sub">Customize how Tenshi looks and feels.\nYou can always change this later.</string>
    <string name="oobe_config_theme_select_title">Select a Theme</string>
    <string name="oobe_config_theme_follow_system">@string/settings_theme_follow_system</string>
    <string name="oobe_config_theme_light">@string/settings_theme_light</string>
    <string name="oobe_config_theme_dark">@string/settings_theme_dark</string>
    <string name="oobe_config_theme_amoled">@string/settings_theme_amoled</string>
    <string name="oobe_config_other_settings_title">Other Settings</string>
    <string name="oobe_config_nsfw">Show NSFW Content</string>
    <string name="oobe_config_nsfw_confirm_title">@string/settings_dialog_confirm_nsfw_title</string>
    <string name="oobe_config_nsfw_confirm_message">@string/settings_dialog_confirm_nsfw_text</string>
    <string name="oobe_config_nsfw_confirm_no">@string/settings_dialog_confirm_nsfw_no</string>
    <string name="oobe_config_nsfw_confirm_yes">@string/settings_dialog_confirm_nsfw_yes</string>
    <string name="oobe_config_skip_tutorial">Skip App Tutorial</string>
    <string name="oobe_config_dummy_1">Randomly Crash the App</string>
    <string name="oobe_config_dummy_2">Use way too much data</string>
    <string name="oobe_config_dummy_note">* JK the last two do nothing</string>
    <string name="oobe_fetch_data">Finishing Things up</string>
    <string name="search_title">Search</string>
    <string name="search_no_results">No results</string>
    <string name="search_query_hint">Search</string>
    <string name="search_open_image_search_content_desc">Open Image Search</string>
    <string name="trace_title">Image Search</string>
    <string name="trace_select_image_button">Select a Image</string>
    <string name="trace_frames_searched_fmt">Searched %s frames</string>
    <string name="trace_snack_no_quota">No search quota left this month! \ntry again next month (or get a different IP somehow)</string>
    <string name="trace_snack_low_quota">You used over 80% of your search quota this month</string>
    <string name="trace_snack_cannot_connect">Cannot connect to trace.moe</string>
    <string name="trace_snack_api_error_fmt">Search failed. \n%s</string>
    <string name="trace_snack_share_fail">Failed to load shared image</string>
    <string name="trace_episode_no_fmt">Episode %d</string>
    <string name="trace_unknown_episode">Unknown Episode</string>
    <string name="trace_span_ss_fmt">%.0f</string>
    <string name="trace_span_mm_ss_fmt">%.0f:%02.0f</string>
    <string name="trace_span_hh_mm_ss_fmt">%.0f:%02.0f:%02.0f</string>
    <string name="trace_span_fmt">%s - %s</string>
    <string name="trace_match_confidence_fmt">%.0f%%</string>
    <string name="fullscreen_img_title">Image</string>
    <string name="settings_title">Settings</string>
    <string name="settings_theme_title">App Theme</string>
    <string name="settings_theme_summary">Choose the App Theme</string>
    <string name="settings_start_section_title">Startup Tab</string>
    <string name="settings_start_section_summary">The Tab that is first opened when you open the app</string>
    <string name="settings_nsfw_toggle_title">Show NSFW</string>
    <string name="settings_nsfw_toggle_on">NSFW Content is visible</string>
    <string name="settings_nsfw_toggle_off">NSFW Content is filtered</string>
    <string name="settings_timezone_adjust_toggle_title">Adjust Broadcast Timezone</string>
    <string name="settings_timezone_adjust_toggle_on">Broadcast Times are shown in your Timezone</string>
    <string name="settings_timezone_adjust_toggle_off">Broadcast Times are shown in JST</string>
    <string name="settings_title_mode_title">Preferred Title</string>
    <string name="settings_title_mode_summary">What title should be shown for anime</string>
    <string name="settings_tut_reset_title">Reset Tutorial</string>
    <string name="settings_tut_reset_summary">Lets you repeat the app tutorial</string>
    <string name="settings_logout_title">Logout</string>
    <string name="settings_logout_summary">Log out of your MAL account</string>
    <string name="settings_reset_prefs_title">Reset Settings</string>
    <string name="settings_reset_prefs_summary">Reset Settings to the default values</string>
    <string name="settings_dev_options_title">Developer Options</string>
    <string name="settings_dev_options_summary">Open Developer Options</string>
    <string name="settings_app_version_title">App Version</string>
    <string name="settings_app_build_date_title">Build Time</string>
    <string name="settings_about_libraries_title">About Libraries</string>
    <string name="settings_about_libraries_summary">Show Open Source Licenses</string>
    <string name="settings_about_trace_title">trace.moe</string>
    <string name="settings_about_trace_summary">Tenshi uses trace.moe for reverse image search</string>
    <string name="settings_about_trace_url">https://trace.moe/</string>
    <string name="settings_theme_follow_system">Default</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_amoled">Amoled</string>
    <string name="settings_start_tab_home">Home</string>
    <string name="settings_start_tab_library">Library</string>
    <string name="settings_start_tab_profile">Profile</string>
    <string name="settings_section_main">Settings</string>
</resources>