<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <FrameLayout
        android:id="@+id/progress_or_image_group"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <!-- progress bar while checking -->
    <ProgressBar
        android:id="@+id/loading_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:indeterminate="true"
        android:visibility="visible" />

    <!-- no connection image TODO empty state mascot -->
    <ImageView
        android:id="@+id/no_connection_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/shared_app_label"
        android:src="@drawable/ic_icon_24"
        android:visibility="invisible"
        app:tint="?attr/colorPrimary"
        tools:visibility="visible" />
    </FrameLayout>

    <!-- text explaining what is happening -->
    <TextView
        android:id="@+id/progress_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/oobe_con_check_in_progress"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_or_image_group" />

    <!-- retry button -->
    <Button
        android:id="@+id/retry_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:text="@string/oobe_con_retry"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_label"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>